Update index.html for DevOps Project v2.0

--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deepak's DevOps Pipeline</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            text-align: center;
+            padding: 50px;
+        }
+        .container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            display: inline-block;
+        }
+        h1 { color: #2c3e50; }
+        .status { color: #27ae60; font-weight: bold; }
+        .version { color: #7f8c8d; font-size: 0.9em; }
+    </style>
+</head>
 <body>
-    <h1>Deepak's DevOps Project v1.0</h1>
-    <p>Automated Deployment via Jenkins & Docker is Successful!</p>
+    <div class="container">
+        <h1>Deepak's DevOps Project v2.0</h1>
+        <p class="status">✅ CI/CD Pipeline Status: SUCCESSFUL</p>
+        <p>This update was triggered automatically by <strong>GitHub</strong> and deployed by <strong>Jenkins</strong> inside a <strong>Docker</strong> container!</p>
+        <p class="version">Build Time: 2025-12-19</p>
+    </div>
 </body>
 </html>
